--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lostwell-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://lostwell.github.io/",
+  "homepage": "https://lostwell.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
