--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "feather-icons-react": "^0.4.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "tsparticles": "^1.30.4",
     "web-vitals": "^1.0.1"
