--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "feather-icons-react": "^0.4.3",
     "lodash": "^4.17.21",
+    "luxon": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
