--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "homepage": "https://lostwell.github.io/",
   "dependencies": {
-    "@react-spring/web": "^9.2.3",
+    "@react-spring/web": "^9.2.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "classnames": "^2.3.1",
     "feather-icons-react": "^0.4.3",
     "lodash": "^4.17.21",
     "luxon": "^2.0.1",
