--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-particles-js": "^3.5.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "tsparticles": "^1.30.4",
