--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "luxon": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.5.3",
+    "react-particles": "^2.12.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.1.0",
-    "styled-components": "^5.3.0",
-    "tsparticles": "^1.30.4",
+    "styled-components": "^6.0.8",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
