--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.3.2",
     "classnames": "^2.3.1",
     "feather-icons-react": "^0.4.3",
     "lodash": "^4.17.21",
     "luxon": "^2.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^17.0.2",
     "react-particles": "^2.12.2",
     "react-redux": "^7.2.4",
