--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://lostwell.github.io/",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@react-spring/web": "^9.2.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -16,10 +17,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^17.0.2",
+    "react-grid-gallery": "^1.0.1-alpha.0",
+    "react-image-lightbox": "^5.1.4",
     "react-particles": "^2.12.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-timeline-scribble": "^1.0.14",
     "redux": "^4.1.0",
     "styled-components": "^6.0.8",
     "tsparticles-slim": "^2.12.0",
